--- a/CSharp/Sandbox/Sandbox/Sandbox.csproj
+++ b/CSharp/Sandbox/Sandbox/Sandbox.csproj
@@ -74,7 +74,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="csfml-Audio.dll">
@@ -92,6 +91,14 @@
     <Content Include="openal32.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="DotnetNoise">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="SFML.Net">
+      <Version>2.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
