--- a/CSharp/Sandbox/Sandbox/Sandbox.csproj
+++ b/CSharp/Sandbox/Sandbox/Sandbox.csproj
@@ -63,14 +63,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fluid\GlobalForce.cs" />
+    <Compile Include="Fluid\IConfine.cs" />
+    <Compile Include="Fluid\IForceSingle.cs" />
+    <Compile Include="Fluid\IForcePair.cs" />
+    <Compile Include="Fluid\IForce.cs" />
+    <Compile Include="Fluid\InnerBounds.cs" />
+    <Compile Include="Fluid\OuterBounds.cs" />
     <Compile Include="Fluid\Particle.cs" />
     <Compile Include="Fluid\ParticleSystem.cs" />
+    <Compile Include="Graphics\Viewport.cs" />
+    <Compile Include="Ground\GroundMap.cs" />
+    <Compile Include="Input\Mouse.cs" />
+    <Compile Include="Interfaces\IDynamic.cs" />
+    <Compile Include="Interfaces\IRender.cs" />
+    <Compile Include="Interfaces\IStatic.cs" />
+    <Compile Include="VectorFunctions\LineSegmentIntersection.cs" />
     <Compile Include="Sandbox.cs" />
     <Compile Include="Graphics\Context.cs" />
     <Compile Include="Graphics\Window.cs" />
     <Compile Include="Input\Keyboard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Interfaces\IEntity.cs" />
+    <Compile Include="Scene\Scene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
